[package]
name = "rust-demo8"
version = "0.1.0"
edition = "2024"
#reqwest = { version = "0.11", features = ["json"] }
#tokio = { version = "1", features = ["full"] }

[dependencies]


reqwest = { version = "0.12.20", features = ["json"] }

tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }


